--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
       background-color: #0078d4; /* Blue button color */
       color: white;
       border: none;
+      padding: 10px; /* Add padding */
     }
 
     .qa-container {
